--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,11 +1,10 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-GlobalDefaultGameMode="/Script/DC.DCGameMode"
+GlobalDefaultGameMode=/Script/DC.DCGameMode
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_8
-
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/DC")
@@ -18,6 +17,16 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/Engine.RecastNavMesh]
+bDrawPolyEdges=True
+AgentRadius=34.000000
+TileSizeUU=1000.000000
+bForceRebuildOnLoad=True
+RuntimeGeneration=Dynamic
+
+[/Script/Engine.NavigationSystem]
+bAutoCreateNavigationData=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -56,5 +65,4 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
 
