--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -24,6 +24,7 @@ AgentRadius=34.000000
 TileSizeUU=1000.000000
 bForceRebuildOnLoad=True
 RuntimeGeneration=Dynamic
+CellHeight=10.000000
 
 [/Script/Engine.NavigationSystem]
 bAutoCreateNavigationData=True
@@ -65,4 +66,5 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
+
 
