--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,6 +11,7 @@ MinimumiOSVersion=IOS_8
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/DC")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="DCGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="DCCharacter")
++ActiveClassRedirects=(OldClassName="DCWeapon",NewClassName="DCEquippable")
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
