--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -25,10 +25,13 @@ AgentRadius=34.000000
 TileSizeUU=1000.000000
 bForceRebuildOnLoad=True
 RuntimeGeneration=Dynamic
-CellHeight=10.000000
+CellHeight=1.000000
 
 [/Script/Engine.NavigationSystem]
 bAutoCreateNavigationData=True
+
+[/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=Always
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -60,6 +63,7 @@ bSuppressFaceRemapTable=False
 bSupportUVFromHitResults=False
 bDisableActiveActors=False
 bDisableCCD=False
+bEnableEnhancedDeterminism=False
 MaxPhysicsDeltaTime=0.033333
 bSubstepping=False
 bSubsteppingAsync=False
@@ -68,7 +72,6 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
+PhysXTreeRebuildRate=10
 
-[/Script/Engine.UserInterfaceSettings]
-RenderFocusRule=Always
 
